--- a/html/homepage/homepage.html
+++ b/html/homepage/homepage.html
@@ -26,8 +26,8 @@
   
   <!-- Welcome Banner -->
   <div class="welcome-banner">
-    <h1 class="welcome-banner-title">WELCOME TO OUR AMAZING IDZMIR ADVENTURE!</h1>
-    <p class="welcome-banner-subtitle">LEARN, PLAY, AND GROW WITH FUN FARM FRIENDS!</p>
+    <h1 class="welcome-banner-title">WELCOME TO OUR AMAZING IDZMIR™ ADVENTURE!</h1>
+    <p class="welcome-banner-subtitle">LEARN, PLAY, AND GROW WITH IDZMIR FRIENDS!</p>
   </div>
 
   <!-- Main Content Grid -->
@@ -105,30 +105,13 @@
     </section>
 
     <!-- Seasonal Section -->
-    <section class="section seasonal" data-title="School">
-      <div class="cards-wrapper">
-        <div class="card" onclick="handleCardClick('winter')">
-          <img src="../../assets/images/winter.png" alt="Winter" class="card-img">
-          <div class="card-title">Winter</div>
-        </div>
-        <div class="card" onclick="handleCardClick('spring')">
-          <img src="../../assets/images/spring.png" alt="Spring" class="card-img">
-          <div class="card-title">Spring</div>
-        </div>
-        <div class="card" onclick="handleCardClick('summer')">
-          <img src="../../assets/images/summer.png" alt="Summer" class="card-img">
-          <div class="card-title">Summer</div>
-        </div>
-        <div class="card" onclick="handleCardClick('autumn')">
-          <img src="../../assets/images/autumn.png" alt="Autumn" class="card-img">
-          <div class="card-title">Autumn</div>
-        </div>
-        <div class="card" onclick="handleCardClick('calendar')">
-          <img src="../../assets/images/calendar.png" alt="Calendar" class="card-img">
-          <div class="card-title">Calendar</div>
-        </div>
-      </div>
-    </section>
+<section class="section seasonal coming-soon-section" data-title="School">
+  <div class="coming-soon-overlay">
+    <div class="coming-soon-icon">🚀</div>
+    <div class="coming-soon-text">COMING SOON</div>
+    <div class="coming-soon-subtext">We're working on something awesome!</div>
+  </div>
+</section>
   </main>
 
   <!-- New Modal System -->
