--- a/html/Admin/dashboard.html
+++ b/html/Admin/dashboard.html
@@ -25,9 +25,9 @@
         .sidebar.active { transform: translateX(0); }
         .sidebar-logo { text-align: center; margin-bottom: 0.75rem; padding-bottom: 0.5rem; border-bottom: 1px solid rgba(255,255,255,0.2); }
         .header-logo { height: 45px; width: auto; object-fit: contain; }
-        .sidebar-logo-img { width: 100%; height: 100%; object-fit: contain; }
+        .sidebar-logo-img { width: 350%; height: 320%; object-fit: contain; margin-top: 50px; }
         .sidebar-logo-icon { width: 60px; height: 60px; margin: 0 auto 0.3rem; display: flex; align-items: center; justify-content: center; }
-        .sidebar-logo-text { font-size: 0.85rem; font-weight: bold; color: #fed236; }
+        .sidebar-logo-text { font-size: 0.85rem; font-weight: bold; color: #fed236; margin-top: 50px;}
         .sidebar-logo-sub { font-size: 0.55rem; color: rgba(255,255,255,0.7); }
         .sidebar ul { list-style: none; }
         .sidebar ul li { margin-bottom: 2px; }
