--- a/html/SpatialConcepts/behind-inFrontOf/game_page3.html
+++ b/html/SpatialConcepts/behind-inFrontOf/game_page3.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../../css/SpatialConcepts/behind-inFrontOf/game_page3.css">
   <link rel="stylesheet" href="../../../css/homepage/header.css">
-
 </head>
 <body>
 
@@ -51,7 +50,7 @@
   </div>
 </div>
 
-      <!-- 🎉 SCORE MODAL (Hidden by default) -->
+<!-- 🎉 SCORE MODAL (Hidden by default) -->
 <div class="score-modal" id="scoreModal" style="display: none;">
   <div class="score-container">
     <!-- ⭐ Stars embedded at top of bukit -->
@@ -79,19 +78,47 @@
   </div>
 </div>
 
-
-      <!-- NEXT BUTTON -->
-  <div class="next-button-container">
+<!-- Next Button -->
+<div class="next-button-container">
   <a href="../../../../html/SpatialConcepts/between-around/game_page4.html">
-      <img src="../../../assets/images/next.png" alt="Next Button" class="next-button">
-    </a>
+    <img src="../../../assets/images/next.png" alt="Next Button" class="next-button">
+  </a>
+</div>
 
+<!-- ================= SCRIPTS ================= -->
+
+<!-- 1. FIREBASE SDK (MUST BE FIRST!) -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+<!-- 2. FIREBASE CONFIGURATION -->
+<script>
+  // TODO: Replace with your actual Firebase config
+  const firebaseConfig = {
+apiKey: "AIzaSyCpDrWgLXXHK7_9nioEQGBKJkUv4byCEd4",
+  authDomain: "idzmir-kids-hub.firebaseapp.com",
+  projectId: "idzmir-kids-hub",
+  storageBucket: "idzmir-kids-hub.firebasestorage.app",
+  messagingSenderId: "301692363279",
+  appId: "1:301692363279:web:ba7c6547b36e433d6eb97a"  };
+
+  // Initialize Firebase
+  if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+    console.log('✅ Firebase initialized successfully');
+  } else {
+    console.log('ℹ️ Firebase already initialized');
+  }
+</script>
+
+<!-- 3. GAME SESSION MANAGER -->
+<script src="../../../js/gameSessionManager.js"></script>
+
+<!-- 4. GAME LOGIC -->
 <script src="../../../js/SpatialConcepts/behind-inFrontOf/game_page3.js"></script>
 
-  <!-- Load initHeader.js FIRST -->
-<script src="../../../../js/homepage/initHeader.js"></script>
-
-<!-- THEN call initializeHeader with correct path -->
+<!-- 5. HEADER (LAST!) -->
+<script src="../../../js/homepage/initHeader.js"></script>
 <script>
   initializeHeader('../../homepage/header.html');
 </script>
