--- a/html/SpatialConcepts/up-down/game_page6.html
+++ b/html/SpatialConcepts/up-down/game_page6.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../../css/SpatialConcepts/up-down/game_page6.css">
   <link rel="stylesheet" href="../../../css/homepage/header.css">
-
 </head>
 <body>
 
@@ -25,23 +24,23 @@
 
   <div class="main-layout">
     <div class="left-section">
-      <div class="question-label">turun</div>
+      <div class="question-label">naik</div>
       <div class="question-box" id="questionBox">
         <div class="question-mark">?</div>
-        <img src="../../../assets/images/down.png" alt="turun" class="question-icon">
+        <img src="../../../assets/images/up.png" alt="naik" class="question-icon">
         <img class="answer-image" id="answerImage" src="" alt="Jawapan">
       </div>
     </div>
 
     <div class="right-section">
-      <div class="question-prompt">Mana yang nurun?</div>
+      <div class="question-prompt">Mana yang naik?</div>
       
       <div class="options-section">
-        <div class="option-card" data-answer="correct">
+        <div class="option-card" data-answer="wrong">
             <img src="../../../assets/images/down.png" alt="Turun" class="card-image">
         </div>
 
-        <div class="option-card" data-answer="wrong">
+        <div class="option-card" data-answer="correct">
             <img src="../../../assets/images/up.png" alt="Naik" class="card-image">
         </div>
       </div>
@@ -51,10 +50,9 @@
   </div>
 </div>
 
-      <!-- 🎉 SCORE MODAL (Hidden by default) -->
+<!-- Score Modal -->
 <div class="score-modal" id="scoreModal" style="display: none;">
   <div class="score-container">
-    <!-- ⭐ Stars embedded at top of bukit -->
     <div class="stars-container">
       <div class="star star-small">
         <img src="../../../assets/images/star1.png" class="star-image" alt="Star" />
@@ -67,31 +65,57 @@
       </div>
     </div>
 
-    <!-- 🏷️ Title -->
     <div class="score-title">Markah anda</div>
 
-    <!-- 📦 Score Box -->
     <div class="score-box-wrapper">
       <div class="score-box">
-        <div class="score-value" id="finalScoreDisplay">2/2</div>
+        <div class="score-value" id="finalScoreDisplay">0/2</div>
       </div>
     </div>
   </div>
 </div>
 
-
-      <!-- NEXT BUTTON -->
-  <div class="next-button-container">
+<!-- Next Button -->
+<div class="next-button-container">
   <a href="../../../../html/SpatialConcepts/near-far/game_page7.html">
-      <img src="../../../assets/images/next.png" alt="Next Button" class="next-button">
-    </a>
+    <img src="../../../assets/images/next.png" alt="Next Button" class="next-button">
+  </a>
+</div>
 
+<!-- ================= SCRIPTS ================= -->
+
+<!-- 1. FIREBASE SDK (MUST BE FIRST!) -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+<!-- 2. FIREBASE CONFIGURATION -->
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCpDrWgLXXHK7_9nioEQGBKJkUv4byCEd4",
+    authDomain: "idzmir-kids-hub.firebaseapp.com",
+    projectId: "idzmir-kids-hub",
+    storageBucket: "idzmir-kids-hub.firebasestorage.app",
+    messagingSenderId: "301692363279",
+    appId: "1:301692363279:web:ba7c6547b36e433d6eb97a"
+  };
+
+  // Initialize Firebase
+  if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+    console.log('✅ Firebase initialized successfully');
+  } else {
+    console.log('ℹ️ Firebase already initialized');
+  }
+</script>
+
+<!-- 3. GAME SESSION MANAGER -->
+<script src="../../../js/gameSessionManager.js"></script>
+
+<!-- 4. GAME LOGIC -->
 <script src="../../../js/SpatialConcepts/up-down/game_page6.js"></script>
 
-  <!-- Load initHeader.js FIRST -->
-<script src="../../../../js/homepage/initHeader.js"></script>
-
-<!-- THEN call initializeHeader with correct path -->
+<!-- 5. HEADER (LAST!) -->
+<script src="../../../js/homepage/initHeader.js"></script>
 <script>
   initializeHeader('../../homepage/header.html');
 </script>
