Scoring to firebase

--- a/html/ColorShapeConcepts/orange/game_page5.1.html
+++ b/html/ColorShapeConcepts/orange/game_page5.1.html
@@ -59,13 +59,13 @@
             <div class="fruit-item" draggable="true" data-fruit="apple" data-color="green">
                 <img src="../../../assets/images/apple.png" alt="Apple">
             </div>
-            <div class="fruit-item" draggable="true" data-fruit="carrot1" data-color="orange">
+            <div class="fruit-item" draggable="true" data-fruit="carrot1" data-color="oren">
                 <img src="../../../assets/images/carrot1.png" alt="Carrot">
             </div>
             <div class="fruit-item" draggable="true" data-fruit="tomato" data-color="red">
                 <img src="../../../assets/images/tomato.png" alt="Tomato">
             </div>
-            <div class="fruit-item" draggable="true" data-fruit="carrot" data-color="orange">
+            <div class="fruit-item" draggable="true" data-fruit="carrot" data-color="oren">
                 <img src="../../../assets/images/carrot2.png" alt="Carrot">
             </div>
             <div class="fruit-item" draggable="true" data-fruit="tomato2" data-color="red">
@@ -74,10 +74,10 @@
             <div class="fruit-item" draggable="true" data-fruit="apple2" data-color="red">
                 <img src="../../../assets/images/apple2.png" alt="Apple">
             </div>
-            <div class="fruit-item" draggable="true" data-fruit="carrot3" data-color="orange">
+            <div class="fruit-item" draggable="true" data-fruit="carrot3" data-color="oren">
                 <img src="../../../assets/images/carrot3.png" alt="Carrot">
             </div>
-            <div class="fruit-item" draggable="true" data-fruit="carrot4" data-color="orange">
+            <div class="fruit-item" draggable="true" data-fruit="carrot4" data-color="oren">
                 <img src="../../../assets/images/carrot4.png" alt="Carrot">
             </div>
             <div class="fruit-item" draggable="true" data-fruit="apple3" data-color="red">
