--- a/html/SpatialConcepts/over-through/game_page5.html
+++ b/html/SpatialConcepts/over-through/game_page5.html
@@ -38,11 +38,11 @@
       
       <div class="options-section">
         <div class="option-card" data-answer="correct">
-            <img src="../../../assets/images/over.png" alt="melalui" class="card-image">
+            <img src="../../../assets/images/through.png" alt="melalui" class="card-image">
         </div>
 
         <div class="option-card" data-answer="wrong">
-            <img src="../../../assets/images/through.png" alt="melepasi" class="card-image">
+            <img src="../../../assets/images/over.png" alt="melepasi" class="card-image">
         </div>
       </div>
 
