--- a/html/QuantitativeConcepts/same-different/game_page3.html
+++ b/html/QuantitativeConcepts/same-different/game_page3.html
@@ -20,7 +20,7 @@
     Konsep Jumlah & Bilangan
   </div>
   <div class="banner-blue">
-    Yang manakah persamaan?
+    Yang manakah sama?
   </div>
 </div>
 
@@ -31,8 +31,8 @@
 </div>
 
 <div class="image-container">
-  <img src="../../../assets/images/same.png" alt="persamaan" class="image-item">
-  <img src="../../../assets/images/different.png" alt="perbezaan" class="image-item">
+  <img src="../../../assets/images/same.png" alt="sama" class="image-item">
+  <img src="../../../assets/images/different.png" alt="beza" class="image-item">
 </div>
 
  <!-- Table + Basket background combined -->
@@ -73,12 +73,40 @@
       </a>
     </div>
 
+<!-- ================= SCRIPTS ================= -->
+
+<!-- 1. FIREBASE SDK (MUST BE FIRST!) -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+<!-- 2. FIREBASE CONFIGURATION -->
+<script>
+  // TODO: Replace with your actual Firebase config
+  const firebaseConfig = {
+apiKey: "AIzaSyCpDrWgLXXHK7_9nioEQGBKJkUv4byCEd4",
+  authDomain: "idzmir-kids-hub.firebaseapp.com",
+  projectId: "idzmir-kids-hub",
+  storageBucket: "idzmir-kids-hub.firebasestorage.app",
+  messagingSenderId: "301692363279",
+  appId: "1:301692363279:web:ba7c6547b36e433d6eb97a"  };
+
+  // Initialize Firebase
+  if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+    console.log('✅ Firebase initialized successfully');
+  } else {
+    console.log('ℹ️ Firebase already initialized');
+  }
+</script>
+
+<!-- 3. GAME SESSION MANAGER -->
+<script src="../../../js/gameSessionManager.js"></script>
+
+<!-- 4. GAME LOGIC -->
 <script src="../../../js/QuantitativeConcepts/same-different/game_page3.js"></script>
 
-  <!-- Load initHeader.js FIRST -->
-<script src="../../../../js/homepage/initHeader.js"></script>
-
-<!-- THEN call initializeHeader with correct path -->
+<!-- 5. HEADER (LAST!) -->
+<script src="../../../js/homepage/initHeader.js"></script>
 <script>
   initializeHeader('../../homepage/header.html');
 </script>
